--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -11,7 +11,7 @@
 html{
      width: 100%;
     height: 100%; 
-    /* font-size: 62.5%; */
+    font-size: 62.5%;
 }
 
 
@@ -89,7 +89,7 @@ html{
 
         .navbar-left {
             display: flex;
-            font-size: var(--ms);
+            font-size: 1.6rem;
             width: 70%;
         }
 
@@ -181,13 +181,14 @@ html{
     .desktop-menu {
         position: absolute;
         background: var(--white);
-        top: 46px;
+        top: 100.6%;
         right: 60px;
         left: auto;
       height: auto;
       border: 1px solid #000000;
       border-radius: 6px;
       padding: 20px 20px 0 20px;
+      font-size: 1.6rem;
     }
     .desktop-menu ul {
       list-style: none;
@@ -273,10 +274,11 @@ html{
         position: absolute;
         right: 0;
         padding: 0 50px;
-        top: 46px;
+        top: 7.6%;
         border: 1px solid black;
         border-radius: 6px;
-    } 
+        font-size: 1.6rem;
+        } 
 
 /* configs de mis ordenes pedidadas: */
 
@@ -448,6 +450,7 @@ html{
         min-height: 62.4%;
         /* padding: 0 0 5% 0; */
          padding: 73px 0 5% 0px;
+         font-size: 1.6rem;
 
     }
 
@@ -659,10 +662,11 @@ html{
         box-sizing: border-box;
         position: absolute;
         right: 0;
-        top: 46px;
+        top: 7.6%;
         padding: 0 3.4%;
         border: 1px solid black;
         border-radius: 6px;
+        font-size: 1.6rem;
 }
 
 #my-orderTotalOrdenes {
@@ -723,11 +727,12 @@ html{
 
     .divIngresoCuenta{
         position: absolute;
-        right: 30%;
-        left: 30%;
-        top: 46px;
-        width: 40%;
+        right: 25%;
+        left: 25%;
+        top: 100.6%;
+        width: 50%;
         height: 100%;
+        font-size: 1.6rem;
         
         
     }
@@ -760,18 +765,18 @@ html{
     }
     .formIngreso a {
       color: var(--hospital-green);
-      font-size: var(--sm);
+      /* font-size: var(--sm); */
       text-align: center;
       text-decoration: none;
       margin-bottom: 52px;
     }
     .labelEmailIngreso {
-      font-size: var(--sm);
+      /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
     .labelPasswordIngreso {
-      font-size: var(--sm);
+      /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
@@ -825,11 +830,12 @@ html{
 
     .divCrearCuenta{
         position: absolute;
-        right: 30%;
-        left: 30%;
-        top: 46px;
-        width: 40%;
+        right: 25%;
+        left: 25%;
+        top: 100.6%;
+        width: 50%;
         height: 100%;
+        font-size: 1.6rem;
     }
    
     
@@ -879,13 +885,13 @@ html{
     }
     .formCrear a {
       color: var(--hospital-green);
-      font-size: var(--sm);
+      /* font-size: var(--sm); */
       text-align: center;
       text-decoration: none;
       margin-bottom: 52px;
     }
     .labelCrearName {
-      font-size: var(--sm);
+      /* font-size: var(--sm); */
       font-weight: bold;
       margin-bottom: 4px;
     }
@@ -902,13 +908,13 @@ html{
       margin-bottom: 22px;
     }
     .labelEmailCrear {
-      font-size: var(--sm);
-      font-weight: bold;
+/*       font-size: var(--sm);
+ */      font-weight: bold;
       margin-bottom: 4px;
     }
     .labelPasswordCrear {
-      font-size: var(--sm);
-      font-weight: bold;
+/*       font-size: var(--sm);
+ */      font-weight: bold;
       margin-bottom: 4px;
     }
     .inputCrearEmail {
