--- a/camkatMob.css
+++ b/camkatMob.css
@@ -977,7 +977,7 @@ html{
       text-align: center;
     }
     .email-imageEmailCreado {
-      width: 132px;
+      width: 100%;
       height: 132px;
       border-radius: 50%;
       background-color: var(--text-input-field);
@@ -1005,7 +1005,10 @@ html{
       margin-bottom: 30px;
     }
      .resendEmailCreado {
-      font-size: var(--sm);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 1.6rem;
     }
     .resendEmailCreado span {
       color: var(--very-light-pink);
