--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -959,6 +959,98 @@ html{
       margin-bottom: 30px;
     }
 
+
+    
+    /* configs para email creado */
+
+    .divEmailCreado{
+    position: absolute;
+    right: 25%;
+    left: 25%;
+    top: 100.6%;
+    width: 50%;
+    height: 100%;
+    font-size: 1.6rem;
+    }
+    .loginEmailCreado {
+      padding: 0 10%;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background-color: var(--white);
+      border: 1px solid black;
+      border-radius: 6px;
+    }
+    .form-containerEmailCreado {
+      position: relative;
+      top: -34px;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 100%;
+    }
+    .logoEmailCreado {
+      width: 150px;
+      margin-bottom: 10px;
+      justify-self: center;
+      /* display: none; */
+    }
+      .titleEmailCreado {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+    .subtitleEmailCreado {
+      color: var(--very-light-pink);
+      font-size: var(--md);
+      font-weight: 300;
+      margin-top: 0;
+      margin-bottom: 32px;
+      text-align: center;
+    }
+    .email-imageEmailCreado {
+      width: 100%;
+      height: 132px;
+      border-radius: 50%;
+      background-color: var(--text-input-field);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 24px;
+    }
+    .email-imageEmailCreado img {
+      width: 80px;
+    }
+    .primary-buttonEmailCreado {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonEmailCreado {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
+     .resendEmailCreado {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 1.6rem;
+    }
+    .resendEmailCreado span {
+      color: var(--very-light-pink);
+    }
+    .resendEmailCreado a {
+      color: var(--hospital-green);
+      text-decoration: none;
+    }
+   
+
 }
 
 
