--- a/camkatMob.css
+++ b/camkatMob.css
@@ -317,6 +317,7 @@ html{
       height: 70px;
       border-radius: 20px;
       object-fit: cover;
+      
     }
     .shopping-cart p:nth-child(2) {
       color: var(--very-light-pink);
@@ -325,6 +326,11 @@ html{
       font-size: var(--md);
       font-weight: bold;
     }
+
+    /* .shopping-cart figure img:nth-child(2) {
+        cursor: pointer;
+    } */
+
     .primary-button {
       background-color: var(--hospital-green);
       border-radius: 8px;
@@ -335,6 +341,10 @@ html{
       font-size: var(--md);
       font-weight: bold;
       height: 50px;
+    }
+
+    .logoDeCerrarCompraListada{
+        cursor: pointer;
     }
 
     /* configs de detalles de cada orden */
