--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -265,21 +265,26 @@ html{
 
     .title-container {
       display: flex;
+       padding-bottom: 15%;
+      padding-top: 5%;
+      justify-content: center;
     }
     .title-container img {
       transform: rotate(180deg);
       margin-right: 14px;
     }
     .title {
+      
       font-size: var(--lg);
       font-weight: bold;
+      background-color: #DAC0A3;
     }
     .order {
       display: grid;
       grid-template-columns: auto 1fr;
       gap: 16px;
       align-items: center;
-      background-color: var(--text-input-field);
+      background-color: #DAC0A3;
       margin-bottom: 24px;
       border-radius: 8px;
       padding: 0 24px;
@@ -331,6 +336,9 @@ html{
       height: 50px;
     }
 
+    .logoDeCerrarCompraListada{
+        cursor: pointer;
+    }
     /* configs de detalles de cada orden */
 
 
@@ -423,7 +431,7 @@ html{
         background-color: #F8F0E5;
         width: 100%;
        /*  height: auto; */
-        min-height: 62.4%;
+        min-height: 70%;
         padding: 73px 0 5% 0px;
         font-size: 1.6rem;
     }
