--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -284,6 +284,9 @@ html{
 
     .title-container {
       display: flex;
+       padding-bottom: 15%;
+        padding-top: 5%;
+      justify-content: center;
     }
     .title-container img {
       transform: rotate(180deg);
@@ -292,13 +295,14 @@ html{
     .title {
       font-size: var(--lg);
       font-weight: bold;
+      background-color: #DAC0A3;
     }
     .order {
       display: grid;
       grid-template-columns: auto 1fr;
       gap: 16px;
       align-items: center;
-      background-color: var(--text-input-field);
+      background-color: #DAC0A3;
       margin-bottom: 24px;
       border-radius: 8px;
       padding: 0 24px;
@@ -350,6 +354,9 @@ html{
       height: 50px;
     }
 
+    .logoDeCerrarCompraListada{
+        cursor: pointer;
+    }
     /* configs de detalles de cada orden */
 
 
@@ -447,7 +454,7 @@ html{
         background-color: #F8F0E5;
         width: 100%;
        /*  height: auto; */
-        min-height: 62.4%;
+        min-height: 70%;
         /* padding: 0 0 5% 0; */
          padding: 73px 0 5% 0px;
          font-size: 1.6rem;
