--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -179,8 +179,12 @@ html{
       text-align: end;
     }
     .desktop-menu ul li:nth-child(1),
-    .desktop-menu ul li:nth-child(2) {
+    .desktop-menu ul li:nth-child(2),
+    .desktop-menu ul li:nth-child(3) {
       font-weight: bold;
+    }
+     .desktop-menu ul li:nth-child(1){
+      background-color: #DAC0A3;
     }
     .desktop-menu ul li:last-child {
       padding-top: 20px;
