--- a/camkatMob.css
+++ b/camkatMob.css
@@ -181,8 +181,12 @@ html{
       text-align: end;
     }
     .desktop-menu ul li:nth-child(1),
-    .desktop-menu ul li:nth-child(2) {
+    .desktop-menu ul li:nth-child(2),
+    .desktop-menu ul li:nth-child(3){
       font-weight: bold;
+    }
+    .desktop-menu ul li:nth-child(1){
+      background-color: #DAC0A3;
     }
     .desktop-menu ul li:last-child {
       padding-top: 20px;
@@ -198,6 +202,8 @@ html{
       margin-bottom: 20px;
       display: inline-block;
       cursor:pointer;
+      
+
     }
 
     /* settings del modo mobile*/
@@ -236,6 +242,7 @@ html{
     .emailMobil {
       font-size: var(--sm);
       font-weight: 300;
+      background-color: #DAC0A3;
     }
     .sign-outMenuMobil {
       font-size: var(--sm);
