cambie el orden de los LI del menu mobil

--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -160,6 +160,7 @@ html{
 
     .desktop-menu {
         position: absolute;
+        width: 300px;
         background: var(--white);
         top: 100.6%;
         right: 60px;
