en modo mobil aun me aparecen my ordesrs y my counts asi este mal el correo y en modo tablet no me quiere quitar el iniciar sesion cuando ya se inici sesion bien y es por que ese bloque tiene inline-block

--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -202,7 +202,12 @@ html{
       display: inline-block;
       cursor: pointer;
     }
-
+    .emailDesktopSesionIniciada{
+      font-size: var(--sm);
+      font-weight: 300;
+      background-color: #DAC0A3;
+      cursor: initial;
+    }
     /* settings del modo mobile*/
 
     .mobile-menu {
@@ -233,6 +238,12 @@ html{
     .email {
       font-size: var(--sm);
       font-weight: 300 !important;
+    }
+    .emailMobilSesionIniciada{
+      font-size: var(--sm);
+      font-weight: 300;
+      background-color: #DAC0A3;
+      cursor: initial;
     }
     .sign-out {
       font-size: var(--sm);
@@ -786,6 +797,9 @@ html{
          font-size: 1.6rem;
       font-weight: bold;
       height: 50px;
+    }
+    .pInfoErrroneaIngreso {
+        color: red;
     }
     .secondary-buttonIngreso {
       background-color: var(--white);
