le puse el inactive a los li quye contienen las opciones del menu desktop. le puse un selector de clase mas fuerte al nuevo li a que contiene el correo ingresado por el usuario. En modo movil, tablet y desktop ahora ya me deja inactivos el sign out, total ordenes y mi cuenta y solo si halla similitud, entonces ya los muestra

--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -202,7 +202,7 @@ html{
       display: inline-block;
       cursor: pointer;
     }
-    .emailDesktopSesionIniciada{
+    .desktop-menu ul li .emailDesktopSesionIniciada{
       font-size: var(--sm);
       font-weight: 300;
       background-color: #DAC0A3;
