--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -243,13 +243,13 @@ html{
       margin-bottom: 20px;
       /* display: inline-block; */
     }
-    .emailDesktopSesionIniciada{
+    .desktop-menu ul li .emailDesktopSesionIniciada{
       font-size: var(--sm);
       font-weight: 300;
       background-color: #DAC0A3;
       cursor: initial;
     }
-
+ 
     /* settings del modo mobile*/
 
     .mobile-menu {
