puse un selector de clase mas fuerte en css para que CATEGORIES no tenga cursor: pointer

--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -204,7 +204,7 @@ html{
     }
     .desktop-menu ul li .emailDesktopSesionIniciada{
       font-size: var(--sm);
-      font-weight: 300;
+      /* font-weight: 300; */
       background-color: #DAC0A3;
       cursor: initial;
     }
