--- a/camkatMob.css
+++ b/camkatMob.css
@@ -831,6 +831,17 @@ html{
     .pInfoErrroneaIngreso {
         color: red;
     }
+    .ingresadoConExito {
+        color: #fb091a;
+        background-color: black;
+        height: 52px;
+        padding-top: 8px;
+        text-align: center;
+    }
+   /*  .ingresadoConExito h1{
+        padding-right: 15%;
+        padding-left: 13%;
+    } */
     .secondary-buttonIngreso {
       background-color: var(--white);
       border-radius: 8px;
