--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1080,3 +1080,120 @@ html{
       text-decoration: none;
     }
    
+    /* configs para mostrar detalles de cuenta ingresa */
+
+    .divMostrarCuenta{
+    position: absolute;
+    right: 5%;
+    left: 5%;
+    top: 100.6%;
+    width: 90%;
+    height: 100%;
+    font-size: 1.6rem;
+    }
+    .loginMostrarCuenta {
+      padding: 0 10%;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background-color: var(--white);
+      border: 1px solid black;
+      border-radius: 6px;
+    }
+    .form-containerMostrarCuenta {
+      position: relative;
+      top: -34px;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 100%;
+    }
+     .titleMostrarCuenta {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+   /*  .logoCrear {
+      width: 150px;
+      margin-bottom: 10px;
+      justify-self: center;
+    
+    } */
+    .formMostrarCuenta {
+      display: flex;
+      flex-direction: column;
+    }
+    .formMostrarCuenta a {
+      color: var(--hospital-green);
+      font-size: var(--sm);
+      text-align: center;
+      text-decoration: none;
+      margin-bottom: 52px;
+    }
+    .labelNameMostrarCuenta {
+      /* font-size: var(--sm); */
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+     .pNameMostrarCuenta {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+   /*  .input-nameCrear {
+      margin-bottom: 22px;
+    } */
+    .labelEmailMostrarCuenta{
+      /* font-size: var(--sm); */
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .labelPasswordMostrarCuenta {
+      /* font-size: var(--sm); */
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .pEmailMostrarCuenta {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+    /* .input-emailCrear {
+      margin-bottom: 22px;
+    } */
+    .pPasswordMostrarCuenta {
+        background-color: var(--text-input-field);
+        border: none;
+        border-radius: 8px;
+        height: 30px;
+        font-size: var(--md);
+        padding: 6px;
+        margin-bottom: 12px;
+        }
+    /* .input-passwordCrear {
+      margin-bottom: 22px;
+    }  */ 
+    .secondary-buttonMostrarCuenta {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonMostrarCuenta {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
+  
