--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -818,6 +818,7 @@ html{
       text-align: center;
       text-decoration: none;
       margin-bottom: 52px;
+      cursor: pointer;
     }
     .labelEmailIngreso {
       /* font-size: var(--sm); */
@@ -1213,6 +1214,95 @@ html{
       height: 50px;
     }
     .login-buttonMostrarCuenta {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
+
+
+    /* configs para desplegable de cambio de contraseña */
+
+    .divCambiarContrasenia{
+        position: absolute;
+        right: 25%;
+        left: 25%;
+        top: 100.6%;
+        width: 50%;
+        height: 100%;
+        font-size: 1.6rem;
+    }
+    .loginCambiarContrasenia {
+      padding: 0 10%;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background-color: var(--white);
+      border: 1px solid #000000;
+      border-radius: 6px;
+    }
+    .form-containerCambiarContrasenia {
+      position: relative;
+      top: -34px;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 100%;
+    }
+    .titleCambiarContrasenia {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+    .subtitleCambiarContrasenia {
+      color: var(--very-light-pink);
+      font-size: var(--md);
+      font-weight: 300;
+      margin-top: 0;
+      margin-bottom: 32px;
+      text-align: center;
+    }
+    .logoCambiarContrasenia {
+      width: 150px;
+      margin-bottom: 10px;
+      justify-self: center;
+      /* display: none; */
+    }
+    .formCambiarContrasenia {
+      display: flex;
+      flex-direction: column;
+    }
+    .formCambiarContrasenia a {
+      color: var(--hospital-green);
+      /* font-size: var(--sm); */
+      text-align: center;
+      text-decoration: none;
+      margin-bottom: 52px;
+    }
+    .labelCambiarContrasenia {
+      /* font-size: var(--sm); */
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+     .inputCambiarContrasenia {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+    .primary-buttonCambiarContrasenia {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonCambiarContrasenia {
       margin-top: 14px;
       margin-bottom: 30px;
     }
