--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -1,6 +1,6 @@
 /* Esto es un proyecto forkeado de platzi,m llamado curso de frontend developmen, fue forkeado como curso de java scrpt practico ya ahora lo estoy personalizando para mi tienda CamKatStore, haremos cambios de variables, aumento de variables y funciones y sus imagenes seran de ropa. Este proyecto sigue siendo meramente tecnico */
 
-@media screen and (min-width: 888px) /* and (max-width: 1360px) */ {
+@media screen and (min-width: 889px) /* and (max-width: 1360px) */ {
 *{
     box-sizing: border-box;
     padding: 0;
@@ -1188,7 +1188,6 @@ html{
       display: grid;
       place-items: center;
       background-color: var(--white);
-      border: 1px solid #000000;
       border-radius: 6px;
     }
     .form-containerCambiarContrasenia {
@@ -1228,10 +1227,43 @@ html{
       text-decoration: none;
       margin-bottom: 52px;
     }
-    .labelCambiarContrasenia {
+    .labelNameCambiarContrasenia {
          font-size: 1.6rem;
        font-weight: bold;
       margin-bottom: 4px;
+    }
+    .labelEmailCambiarContrasenia {
+         font-size: 1.6rem;
+       font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .labelCambiarContraseniaActual {
+         font-size: 1.6rem;
+       font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .labelCambiarContraseniaNueva {
+         font-size: 1.6rem;
+       font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .inputNameCambiarContrasenia {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+         font-size: 1.6rem;
+       padding: 6px;
+      margin-bottom: 12px;
+    }
+    .inputEmailCambiarContrasenia {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+         font-size: 1.6rem;
+       padding: 6px;
+      margin-bottom: 12px;
     }
     .inputCambiarContrasenia {
       background-color: var(--text-input-field);
@@ -1254,6 +1286,96 @@ html{
       height: 50px;
     }
     .login-buttonCambiarContrasenia {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
+
+     /* configs para desplegable Recuperar cuenta */
+
+    .divRecoverAccount{
+        position: absolute;
+        right: 30%;
+        left: 30%;
+        top: 100.6%;
+        width: 40%;
+        height: 100%;
+         font-size: 1.6rem;
+
+        
+    }
+    .loginRecover {
+      padding: 0 10%;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background-color: var(--white);
+      border: 1px solid #000000;
+      border-radius: 6px;
+    }
+    .form-containerRecover {
+      position: relative;
+      top: -34px;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 100%;
+    }
+    .titleRecover {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+    .subtitleRecover {
+      color: var(--very-light-pink);
+      font-size: var(--md);
+      font-weight: 300;
+      margin-top: 0;
+      margin-bottom: 32px;
+      text-align: center;
+    }
+    .logoRecover {
+      width: 150px;
+      margin-bottom: 10px;
+      justify-self: center;
+      /* display: none; */
+    }
+    .formRecover {
+      display: flex;
+      flex-direction: column;
+    }
+    .formRecover a {
+      color: var(--hospital-green);
+         font-size: 1.6rem;
+      text-align: center;
+      text-decoration: none;
+      margin-bottom: 52px;
+    }
+    .labelCell-o-correoRecover {
+         font-size: 1.6rem;
+       font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .inputCell-o-correoRecover {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+         font-size: 1.6rem;
+       padding: 6px;
+      margin-bottom: 12px;
+    }
+    .primary-buttonRecover {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+         font-size: 1.6rem;
+       font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonCell-o-correoRecover {
       margin-top: 14px;
       margin-bottom: 30px;
     }
