--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -1214,6 +1214,8 @@ html{
       width: 150px;
       margin-bottom: 10px;
       justify-self: center;
+      object-fit: contain;
+      height: 62px;
       /* display: none; */
     }
     .formCambiarContrasenia {
