--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1234,7 +1234,8 @@ html{
       width: 150px;
       margin-bottom: 10px;
       justify-self: center;
-    
+      object-fit: contain;
+      height: 62px;
     }
     .formCambiarContrasenia {
       display: flex;
