--- a/camkatMob.css
+++ b/camkatMob.css
@@ -1504,3 +1504,108 @@ html{
       color: var(--hospital-green);
       text-decoration: none;
     }
+
+
+    /* configs para desplegable de cambio de contraseña */
+
+    .divChangeKey{
+    position: absolute;
+    right: 5%;
+    left: 5%;
+    top: 100.6%;
+    width: 90%;
+    height: 100%;
+    font-size: 1.6rem;
+    }
+    .loginChangeKey {
+      padding: 0 10%;
+      width: 100%;
+      height: 100vh;
+      display: grid;
+      place-items: center;
+      background-color: var(--white);
+      border: 1px solid black;
+      border-radius: 6px;
+    }
+    .form-containerChangeKey {
+      position: relative;
+      top: -12px;
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      width: 100%;
+    }
+     .titleChangeKey {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+    .subtitleChangeKey {
+      color: var(--very-light-pink);
+      font-size: var(--md);
+      font-weight: 300;
+      margin-top: 0;
+      margin-bottom: 32px;
+      text-align: center;
+    }
+    .logoChangeKey{
+      width: 150px;
+      margin-bottom: 10px;
+      justify-self: center;
+      object-fit: contain;
+      height: 62px;
+    }
+    .formChangeKey {
+      display: flex;
+      flex-direction: column;
+    }
+    .formChangeKey a {
+      color: var(--hospital-green);
+      font-size: var(--sm);
+      text-align: center;
+      text-decoration: none;
+      margin-bottom: 52px;
+    }
+    .labelChangeKeyActual {
+      /* font-size: var(--sm); */
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .inputChangeKeyActual {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+    .labelChangeKeyNueva{
+      /* font-size: var(--sm); */
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+    .inputChangeKeyNueva {
+      background-color: var(--text-input-field);
+      border: none;
+      border-radius: 8px;
+      height: 30px;
+      font-size: var(--md);
+      padding: 6px;
+      margin-bottom: 12px;
+    }
+    .primary-buttonChangeKey-Change {
+      background-color: var(--hospital-green);
+      border-radius: 8px;
+      border: none;
+      color: var(--white);
+      width: 100%;
+      cursor: pointer;
+      font-size: var(--md);
+      font-weight: bold;
+      height: 50px;
+    }
+    .login-buttonChangeKey-Change {
+      /* margin-top: 14px; */
+      margin-bottom: 30px;
+    }
+   
