--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -804,9 +804,24 @@ html{
     }
     .logoIngreso {
       width: 150px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
+      height: 100px;
+      object-fit: contain;
       justify-self: center;
       /* display: none; */
+    }
+    .titleIngreso {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+    .subtitleIngreso {
+      color: var(--very-light-pink);
+      font-size: var(--md);
+      font-weight: 300;
+      margin-top: 0;
+      margin-bottom: 10px;
+      text-align: center;
     }
     .formIngreso {
       display: flex;
@@ -817,7 +832,7 @@ html{
       /* font-size: var(--sm); */
       text-align: center;
       text-decoration: none;
-      margin-bottom: 52px;
+      margin-bottom: 10px;
       cursor: pointer;
     }
     .labelEmailIngreso {
@@ -879,8 +894,8 @@ html{
         padding-left: 13%;
     } */
     .login-buttonIngreso {
-      margin-top: 14px;
-      margin-bottom: 30px;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
 
    /*  @media (max-width: 640px) {
