--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -750,9 +750,24 @@ html{
     }
     .logoIngreso {
       width: 150px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
+      height: 100px;
+      object-fit: contain;
       justify-self: center;
       /* display: none; */
+    }
+    .titleIngreso {
+      font-size: var(--lg);
+      margin-bottom: 12px;
+      text-align: center;
+    }
+    .subtitleIngreso {
+      color: var(--very-light-pink);
+      font-size: var(--md);
+      font-weight: 300;
+      margin-top: 0;
+      margin-bottom: 10px;
+      text-align: center;
     }
     .formIngreso {
       display: flex;
@@ -763,7 +778,7 @@ html{
          font-size: 1.6rem;
       text-align: center;
       text-decoration: none;
-      margin-bottom: 52px;
+      margin-bottom: 10px;
      cursor: pointer;
 
     }
@@ -826,8 +841,8 @@ html{
       height: 50px;
     }
     .login-buttonIngreso {
-      margin-top: 14px;
-      margin-bottom: 30px;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
 
    /*  @media (max-width: 640px) {
