--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -901,6 +901,8 @@ html{
     }
     .logoCrear {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1018,6 +1020,8 @@ html{
     }
     .logoEmailCreado {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1113,6 +1117,8 @@ html{
     }
     .logoMostrarCuenta{
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
     
@@ -1236,7 +1242,7 @@ html{
       margin-bottom: 10px;
       justify-self: center;
       object-fit: contain;
-      height: 62px;
+      height: 100px;
       /* display: none; */
     }
     .formEditarAccount {
@@ -1373,6 +1379,8 @@ html{
     }
     .logoRecover {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1447,6 +1455,8 @@ html{
     }
     .logoEmailEnviado {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1557,7 +1567,7 @@ html{
       margin-bottom: 10px;
       justify-self: center;
       object-fit: contain;
-      height: 62px;
+      height: 100px;
       /* display: none; */
     }
     .formChangeKey {
