--- a/camkatTablet.css
+++ b/camkatTablet.css
@@ -953,6 +953,8 @@ html{
     }
     .logoCrear {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1069,6 +1071,8 @@ html{
     }
     .logoEmailCreado {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1163,6 +1167,8 @@ html{
     }
     .logoMostrarCuenta{
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
     
@@ -1282,6 +1288,7 @@ html{
     }
     .logoEditarAccount {
       width: 150px;
+      height: 100px;
       margin-bottom: 10px;
       justify-self: center;
       object-fit: contain;
@@ -1420,6 +1427,8 @@ html{
     }
     .logoRecover {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1495,6 +1504,8 @@ html{
     }
     .logoEmailEnviado {
       width: 150px;
+      height: 100px;
+      object-fit: contain;
       margin-bottom: 10px;
       justify-self: center;
       /* display: none; */
@@ -1601,7 +1612,7 @@ html{
       margin-bottom: 10px;
       justify-self: center;
       object-fit: contain;
-      height: 62px;
+      height: 100px;
       /* display: none; */
     }
     .formChangeKey {
