cambiado el tamaño de letra de mostrarInformacion

--- a/camkatMob.css
+++ b/camkatMob.css
@@ -553,6 +553,7 @@ html{
         background-color: #B99470;
         position: absolute;
         top: 7.6%;
+        font-size: 1.6rem;
     }
 
     .contInfoEmpresa1,
