--- a/camkatDesktop.css
+++ b/camkatDesktop.css
@@ -526,6 +526,7 @@ html{
         background-color: #B99470;
         position: absolute;
         top: 7.6%;
+        font-size: 1.6rem;
     }
 
     .contInfoEmpresa1,
