pusimos nombre y correo en aside de editarCuenta y deshabilitamos botones de ingresar y crear cuenta y borramos boton de olvido contrasenia, por que no se dejo deshabilitar

--- a/camkatMob.css
+++ b/camkatMob.css
@@ -34,17 +34,11 @@ html{
             font-family: 'Quicksand', sans-serif;
         }
 
-
-    /* settings  del navegador */
-
          .inactive {
             display: none;
-        }/* es util para usarla en java script */
+        }
 
-    /*     .inactiveGrid {
-            display:none;
-        } */
-
+   
         .activeFlex {
         width: 100%;
         display: flex;
